@@ -1,5 +1,5 @@
-MOs = da.mo fi.mo nl.mo pl.mo pt_BR.mo
-POs = da.po fi.po nl.po pl.po pt_BR.po
+MOs = da.mo fi.mo nl.mo pl.mo pt_BR.mo zh_CN.mo
+POs = da.po fi.po nl.po pl.po pt_BR.po zh_CN.po
 localedir = $(datadir)/locale
 
 EXTRA_DIST = $(POs)
