@@ -13,6 +13,8 @@ menu (2.1.9-6) unstable; urgency=low
     original string.
   * Update Dutch menu message translation. Closes: #230525. Thanks Tim
     Dijkstra.
+  * Add Chinese menu messages and sections translations. Closes: #232403.
+    Thanks Carlos Z.F. Liu and Yongtao Yang.
 
  -- Bill Allombert <ballombe@debian.org>  Sat, 24 Jan 2004 19:45:43 +0100
 
